Updated nagios3 route in nginx.conf

--- a/cookbooks/nagios/files/default/nginx.conf
+++ b/cookbooks/nagios/files/default/nginx.conf
@@ -21,6 +21,10 @@ server {
   auth_basic "Nagios Restricted Access";
   auth_basic_user_file /etc/nagios3/htpasswd.users;
 
+  location /nagios3 {
+    alias /usr/share/nagios3/htdocs;
+  }
+
   location /stylesheets {
     alias /etc/nagios3/stylesheets;
   }
